创建新模块

--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,14 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+
+            <!-- staff模块-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-staff</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -196,6 +204,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-staff</module>
     </modules>
     <packaging>pom</packaging>
 
