数据库连接

--- a/ruoyi-staff/pom.xml
+++ b/ruoyi-staff/pom.xml
@@ -23,5 +23,23 @@
             <artifactId>ruoyi-common</artifactId>
         </dependency>
 
+        <!-- system-->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
+
+        <!-- lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <!-- swagger3-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
