--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <poi.version>4.1.2</poi.version>
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 	
     <!-- 依赖声明 -->
@@ -193,6 +194,16 @@
                 <artifactId>ruoyi-staff</artifactId>
                 <version>${ruoyi.version}</version>
             </dependency>
+
+
+            <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
